// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot when providing all fields: errors 1`] = `[]`;

exports[`should match snapshot when providing all fields: output 1`] = `
AccountEntity {
  "avatarUrl": "https://avatars.githubusercontent.com/u/20110076?v=4",
  "id": "github/20110076",
  "name": "Zakaria Mansouri",
  "profileUrl": "/Account/github/20110076",
  "repositories": [],
  "username": "ZibanPirate",
}
`;

exports[`should match snapshot when providing required fields only: errors 1`] = `[]`;

exports[`should match snapshot when providing required fields only: output 1`] = `
AccountEntity {
  "avatarUrl": "https://avatars.githubusercontent.com/u/20110076?v=4",
  "id": "github/20110076",
  "name": "Zakaria Mansouri",
  "profileUrl": "/Account/github/20110076",
  "username": "ZibanPirate",
}
`;

exports[`should show an error that matches snapshot when passing empty object: errors 1`] = `
[
  ValidationError {
    "children": [],
    "constraints": {
      "isString": "id must be a string",
    },
    "property": "id",
    "target": AccountEntity {},
    "value": undefined,
  },
  ValidationError {
    "children": [],
    "constraints": {
      "isString": "username must be a string",
    },
    "property": "username",
    "target": AccountEntity {},
    "value": undefined,
  },
  ValidationError {
    "children": [],
    "constraints": {
      "isString": "name must be a string",
    },
    "property": "name",
    "target": AccountEntity {},
    "value": undefined,
  },
  ValidationError {
    "children": [],
    "constraints": {
      "isUrl": "profileUrl must be an URL address",
    },
    "property": "profileUrl",
    "target": AccountEntity {},
    "value": undefined,
  },
  ValidationError {
    "children": [],
    "constraints": {
      "isUrl": "avatarUrl must be an URL address",
    },
    "property": "avatarUrl",
    "target": AccountEntity {},
    "value": undefined,
  },
]
`;

exports[`should show an error that matches snapshot when passing empty object: output 1`] = `AccountEntity {}`;
